# Master-IA-RES-ReconocimientoGrafica

./: .gitignore  README.md  pyproject.toml
docs/: memoria_tecnica.md  presentacion_recongrafica.tex  speech_presentacion.md
notebooks/: README.md
resultados/: captura.csv  captura.json  captura_layoutfix.csv  captura_layoutfix.json  captura_q09.csv  captura_q09.json
src/recongrafica/: __init__.py  __main__.py  calibration.py  cli.py  evaluation.py  exporters.py  image_io.py  layout.py  models.py  ocr.py  parsing.py  pipeline.py  preprocessing.py  signal.py
tests/: test_calibration.py  test_parsing.py  test_pipeline_synthetic.py
