[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recongrafica"
version = "0.1.0"
description = "Pipeline de vision artificial y OCR para reconstruir series temporales desde graficas Steam/CS2."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "MIARFID Reconocimiento Grafica" }
]
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
ocr = [
  "paddleocr>=2.7",
  "paddlepaddle>=2.6",
]
dev = [
  "pytest>=7.4",
]
notebook = [
  "jupyter>=1.0",
  "matplotlib>=3.7",
]

[project.scripts]
recongrafica = "recongrafica.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
